--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <h2>How are You!</h2>
     <h3>How is it going</h3>
     <h4>Okey Nice One :)</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    <br> labore neque sint expedita numquam quis quidem soluta optio adipisci dolorem pariatur accusantium quia reprehenderit officiis, sed mollitia aliquam, dignissimos porro?</p>
+    <hr>
+    <pre>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+
+
+        labore neque sint expedita numquam quis quidem soluta optio adipisci
+        dolorem pariatur accusantium quia 
+      
+        reprehenderit officiis, sed mollitia aliquam, dignissimos porro?
+    </pre>
+
+    <!-- This is the comment-->
 </body>
 </html>
