--- a/HTML/hyperLink.html
+++ b/HTML/hyperLink.html
@@ -18,11 +18,18 @@
         title="Click here to get to know me better. ">
         Notice 
     </a>
+    <br>
+    <a href="https://mail.google.com/mail/u/0/#inbox"
+    target ="_blank"
+    title ="Email Id">
+        Email
+    </a>
     <hr>
     <h2>Linking other html file</h2>
     <a href="myLyrics.html"
     title="Lyrics Songs">
     Click Me
     </a>
+    
 </body>
 </html>
