--- a/HTML/video.html
+++ b/HTML/video.html
@@ -12,6 +12,10 @@
     <img src="image.png"
     height ="450" weidth ="300">
     <pre>Hi Its me Gems. Hope You guys are doing Great.</pre>
+    <audio controls>
+        <source src="Music.mp3">
+    </audio>
+    <br>
     <a href="https://www.facebook.com/gyalwang.ghhyamjolama.3/"
     target="_blank"
     alt="Whats up Beautiful People..."
