--- a/HTML/header&footer.html
+++ b/HTML/header&footer.html
@@ -7,16 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-
+    <header style=background-color:rgb(19,170,230)>
+        <h1>Welcome to the home page</h1>
+        <a href=" ">Home</a>
+        <a href =" ">About</a>
+        <a href=" ">Sign up</a>
+        <a href=" ">Help</a>
     </header>
 
     <main>
-        
+        <h1>HEY</h1>
+        <pre>"Believe you can, and you're halfway there."</pre>
+        <img src="image.png" hegiht ="200" width = "300">
     </main>
 
     <footer>
-
+       <pre>
+        Author:Gems Tmg
+        <a href = " https://www.google.com/search?q=its+a+prank&oq=its+a+prank&aqs=chrome..69i57.2377j0j1&sourceid=chrome&ie=UTF-8#imgrc=57BlYFlz9hosuM">Gmail</a>
+       </pre>
     </footer>
 </body>
 </html>
