Done inline sheet

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:black;">
     <!-- inline, internal and external-->
     <!--inline-->
+    <h1 style="color:white;">Hello</h1>
+    <h2 style="color:azure">Welcome Back To My Page</h2>
+    <pre style="color: aquamarine;">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto eius accusamus veritatis expedita dolorem officiis ullam voluptatem illum, iure quas cupiditate odit itaque nam iste exercitationem aliquam ipsum, vitae delectus!
+    </pre>
+
+    <pre style="color:aquamarine;">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut veniam natus quae odit ea sint? Consequatur magnam vitae rem est. Magnam, temporibus magni? Cumque sapiente voluptate consequatur. Voluptatem, iusto.
+    </pre>
+
+    <pre style="color:aqua">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, molestiae culpa nesciunt repellat facere nobis vel fuga atque fugit, enim consequatur exercitationem ab. Natus labore tempora, enim aperiam quidem quisquam!
+    </pre>
 </body>
 </html>
