Done with internal Sheet

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+        }
+        h1{
+            color: aliceblue;
+        }
+        h2{
+            color:aliceblue;
+        }
+        pre{
+            color:aliceblue;
+        }
+    </style>
 </head>
 <body >
     <!-- inline, internal and external-->
-    <!--inline-->
     <h1 >Hello</h1>
     <h2 >Welcome Back To My Page</h2>
     <pre >
