--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,20 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            background-color: black;
-        }
-        h1{
-            color: aliceblue;
-        }
-        h2{
-            color:aliceblue;
-        }
-        pre{
-            color:aliceblue;
-        }
-    </style>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body >
     <!-- inline, internal and external-->
