--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,7 +11,7 @@
     <!-- inline, internal and external-->
     <h1 >Hello</h1>
     <h2 >Welcome Back To My Page</h2>
-    <pre >
+    <pre id = p1>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto eius accusamus veritatis expedita dolorem officiis ullam voluptatem illum, iure quas cupiditate odit itaque nam iste exercitationem aliquam ipsum, vitae delectus!
     </pre>
 
