Done with some class in external

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,7 +11,7 @@
     <!-- inline, internal and external-->
     <h1 >Hello</h1>
     <h2 >Welcome Back To My Page</h2>
-    <pre id = p1>
+    <pre id = p1 class ="odd">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto eius accusamus veritatis expedita dolorem officiis ullam voluptatem illum, iure quas cupiditate odit itaque nam iste exercitationem aliquam ipsum, vitae delectus!
     </pre>
 
@@ -19,7 +19,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut veniam natus quae odit ea sint? Consequatur magnam vitae rem est. Magnam, temporibus magni? Cumque sapiente voluptate consequatur. Voluptatem, iusto.
     </pre>
 
-    <pre >
+    <pre class = "odd" >
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, molestiae culpa nesciunt repellat facere nobis vel fuga atque fugit, enim consequatur exercitationem ab. Natus labore tempora, enim aperiam quidem quisquam!
     </pre>
 </body>
