--- a/CSS/index.html
+++ b/CSS/index.html
@@ -15,11 +15,11 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto eius accusamus veritatis expedita dolorem officiis ullam voluptatem illum, iure quas cupiditate odit itaque nam iste exercitationem aliquam ipsum, vitae delectus!
     </pre>
 
-    <pre >
+    <pre id = p2>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut veniam natus quae odit ea sint? Consequatur magnam vitae rem est. Magnam, temporibus magni? Cumque sapiente voluptate consequatur. Voluptatem, iusto.
     </pre>
 
-    <pre class = "odd" >
+    <pre id = p3 class = "odd" >
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, molestiae culpa nesciunt repellat facere nobis vel fuga atque fugit, enim consequatur exercitationem ab. Natus labore tempora, enim aperiam quidem quisquam!
     </pre>
 </body>
