--- a/CSS/index.html
+++ b/CSS/index.html
@@ -10,17 +10,10 @@
 <body >
     <!-- inline, internal and external-->
     <h1 >Hello</h1>
-    <h2 >Welcome Back To My Page</h2>
-    <pre id = p1 class ="odd">
+    <pre>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto eius accusamus veritatis expedita dolorem officiis ullam voluptatem illum, iure quas cupiditate odit itaque nam iste exercitationem aliquam ipsum, vitae delectus!
     </pre>
 
-    <pre id = p2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, aut veniam natus quae odit ea sint? Consequatur magnam vitae rem est. Magnam, temporibus magni? Cumque sapiente voluptate consequatur. Voluptatem, iusto.
-    </pre>
-
-    <pre id = p3 class = "odd" >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, molestiae culpa nesciunt repellat facere nobis vel fuga atque fugit, enim consequatur exercitationem ab. Natus labore tempora, enim aperiam quidem quisquam!
-    </pre>
+    
 </body>
 </html>
