--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Welcome Guys :) </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor at aperiam quaerat corporis eum facere asperiores ullam soluta veniam velit optio, libero harum tempora consectetur suscipit animi totam quasi? Nesciunt?</p>
-</body>
+    <img src="image.png" height="150" width="150" alt="Gems Tmg">
+    <p>Gems Tmg</p>
 </html>
