--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="shadow.css">
 </head>
 <body>
     <h1>Welcome Guys :) </h1>
-    <img src="image.png" height="150" width="150" alt="Gems Tmg">
+    <img src="image.png" height="150" width="150" alt="Gems Tmg ">
     <p>Gems Tmg</p>
 </html>
