--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,4 +11,5 @@
     <h1>Welcome Guys :) </h1>
     <img src="image.png" height="150" width="150" alt="Gems Tmg ">
     <p>Gems Tmg</p>
+    <div id ="box"></div>
 </html>
