Lets work with margin

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Welcome Guys :) </h1>
-    <img src="image.png" height="150" width="150" alt="Gems Tmg ">
-    <p>Gems Tmg</p>
-    <div id ="box"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos sed, unde corrupti nostrum, commodi nulla facere possimus libero saepe voluptas exercitationem adipisci quae quasi perspiciatis asperiores repellendus. Assumenda, earum.</p>
 </html>
+
+<!-- margin = sapce around an element -->
