Lets try something new

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Welcome Guys :) </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos sed, unde corrupti nostrum, commodi nulla facere possimus libero saepe voluptas exercitationem adipisci quae quasi perspiciatis asperiores repellendus. Assumenda, earum.</p>
+    <div class="name" id="tag">Er.</div>
+    <div class="name" id="Pname">Ghhyamjo Lama</div>
+
 </html>
 
 <!-- margin = sapce around an element -->
