Basic idea with float

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="margin.css">
+    <link rel="stylesheet" href="float.css">
 </head>
 <body>
-    <h1>Welcome Guys :) </h1>
-    <div class="name" id="tag">Er.</div>
-    <div class="name" id="Pname">Ghhyamjo Lama</div>
-
+    <img src="image.png" height =150 width="150" id="img1">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe reiciendis id, sed unde nesciunt mollitia quis sint quam doloremque, sit, tenetur recusandae perspiciatis repudiandae. Et iste rem officia sint. Ratione!</p>
+    <hr>
+    <img src="GL.jpg" height = 150 width = 150 id="img2">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure omnis asperiores esse fugiat id, maxime architecto voluptas quia odio a rem incidunt ducimus nobis aperiam dolore nihil laudantium ipsam doloremque.</p>
 </html>
 
 <!-- margin = sapce around an element -->
