--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="float.css">
 </head>
 <body>
-    <img src="image.png" height =150 width="150" id="img1">
+    <img src="image.png" height =100 width="100" id="img1">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe reiciendis id, sed unde nesciunt mollitia quis sint quam doloremque, sit, tenetur recusandae perspiciatis repudiandae. Et iste rem officia sint. Ratione!</p>
     <hr>
     <img src="GL.jpg" height = 150 width = 150 id="img2">
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure omnis asperiores esse fugiat id, maxime architecto voluptas quia odio a rem incidunt ducimus nobis aperiam dolore nihil laudantium ipsam doloremque.</p>
 </html>
 
-<!-- margin = sapce around an element -->
+<!-- margin = sapce around an element 
+
+-->
