Let's begin overflow

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="float.css">
+    <link rel="stylesheet" href="overflow.css">
 </head>
 <body>
-    <img src="image.png" height =100 width="100" id="img1">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe reiciendis id, sed unde nesciunt mollitia quis sint quam doloremque, sit, tenetur recusandae perspiciatis repudiandae. Et iste rem officia sint. Ratione!</p>
-    <hr>
-    <img src="GL.jpg" height = 150 width = 150 id="img2">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure omnis asperiores esse fugiat id, maxime architecto voluptas quia odio a rem incidunt ducimus nobis aperiam dolore nihil laudantium ipsam doloremque.</p>
+    
 </html>
 
 <!-- margin = sapce around an element 
+    overflow = property that sets the desired behavior when content does not fit in the parent element box(overflows)
 
+    overflow:visible
+    overflow:hidden
+    overflow:clip
+    overflow:scroll
+    overflow:auto
 -->
