--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,22 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="overflow.css">
+    <link rel="stylesheet" href="display.css">
 </head>
 <body>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laboriosam nisi, vitae debitis dignissimos ad et reiciendis vero excepturi doloribus. Illum earum veniam culpa ducimus ratione accusamus, voluptatem non repellat.
-
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta voluptate rerum excepturi sit natus, quas eius? Modi facere ab error? Minima veniam officiis cumque possimus, error recusandae incidunt ipsam quia.
-
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae nemo non tenetur sit, deleniti mollitia culpa similique, minus dolores officia totam unde nulla libero ipsum quam laborum voluptatibus debitis rem?
-        </p>
-    </div>
+    
 </body>
     
 </html>
 
 <!-- margin = sapce around an element 
+
+    (
     overflow = property that sets the desired behavior when content does not fit in the parent element box(overflows)
 
     overflow:visible
@@ -28,4 +23,14 @@
     overflow:clip
     overflow:scroll
     overflow:auto
+    )
+
+    (
+    display = property specifies if/how an element is displayed
+
+    block-level = start on a new line, take yp the full width available(h1,divmp,form,header,footer)
+
+    inline = do not start on a new line, width is limited to what is needed (span,a,img)
+
+    )
 -->
