Done with display : block,inline,inline-block

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="display.css">
 </head>
 <body>
-    
+    <div>div</div>
+    <span>span</span>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nisi illum voluptates rem fugit esse dolorem quia minima ducimus nostrum eius ipsa quaerat dolor, expedita, autem nulla eum beatae! Alias!
 </body>
     
 </html>
@@ -33,4 +35,6 @@
     inline = do not start on a new line, width is limited to what is needed (span,a,img)
 
     )
+
+    (the <span> element is an inline-level container used to group and apply styles to a specific portion of text or other inline elements. It does not add any semantic meaning of its own but is rather a general-purpose container that allows you to target and style specific parts of a larger block of content.)
 -->
