DOne with height width

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="display.css">
+    <link rel="stylesheet" href="heightwidth.css">
 </head>
 <body>
-    <div>div</div>
-    <span>span</span>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nisi illum voluptates rem fugit esse dolorem quia minima ducimus nostrum eius ipsa quaerat dolor, expedita, autem nulla eum beatae! Alias!
+    <div class="Box">
+        <h1>This is #1</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa labore reprehenderit quos harum nulla, quisquam exercitationem fuga voluptas aspernatur dolorem ducimus nam! Aspernatur esse voluptates placeat quia sunt magnam!
+
+        </p>
+    </div>
+
+    <div class="Box">
+        <h1>This is #2</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa labore reprehenderit quos harum nulla, quisquam exercitationem fuga voluptas aspernatur dolorem ducimus nam! Aspernatur esse voluptates placeat quia sunt magnam!
+
+        </p>
+    </div>
 </body>
     
 </html>
