--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,24 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="heightwidth.css">
+    <link rel="stylesheet" href="position.css">
 </head>
 <body>
-    <div class="Box">
-        <h1>This is #1</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa labore reprehenderit quos harum nulla, quisquam exercitationem fuga voluptas aspernatur dolorem ducimus nam! Aspernatur esse voluptates placeat quia sunt magnam!
+    <!--Position
+        relative = positioned relative to where it normally 
+        fixed = positioned relative to the viewport
+        absolute = positioned relative to nearest ancestor
+        sticky = positioned based on scroll position
+        static = default position for an element
 
-        </p>
-    </div>
-
-    <div class="Box">
-        <h1>This is #2</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ipsa labore reprehenderit quos harum nulla, quisquam exercitationem fuga voluptas aspernatur dolorem ducimus nam! Aspernatur esse voluptates placeat quia sunt magnam!
-
-        </p>
-    </div>
+    -->
 </body>
     
 </html>
