--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,7 +17,12 @@
 
     -->
 
-    <div id = box1></div>
+    <div id = box1>
+        <div id = box2>
+
+        </div>
+    </div>
+   
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
