Done with Background image

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,65 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="position.css">
+    <link rel="stylesheet" href="backgrndimage.css">
 </head>
 <body>
-    <!--Position
-        relative = positioned relative to where it normally 
-        fixed = positioned relative to the viewport
-        absolute = positioned relative to nearest ancestor
-        sticky = positioned based on scroll position
-        static = default position for an element
+    <h1>Welcome to my Home Page</h1>    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam officiis ea, quis sunt sapiente vero nulla reiciendis quasi recusandae ex odit modi obcaecati non eligendi beatae minus. At, totam rem.</p>
 
-    -->
-
-    <div id = box1>
-        <div id = box2>
-
-        </div>
-    </div>
-   
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam eligendi perspiciatis numquam eveniet, atque, nobis quisquam, quod provident nesciunt autem? Adipisci eaque excepturi aperiam modi sapiente hic sint magnam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, veniam et cupiditate velit repudiandae mollitia ad pariatur nam aperiam quasi ab, incidunt enim omnis assumenda dolorum facilis voluptatibus, sunt quisquam.</p>
 </body>
     
 </html>
 
 <!-- margin = sapce around an element 
 
+
+    (Position
+        relative = positioned relative to where it normally 
+        fixed = positioned relative to the viewport
+        absolute = positioned relative to nearest ancestor
+        sticky = positioned based on scroll position
+        static = default position for an element
+
+   )
     (
     overflow = property that sets the desired behavior when content does not fit in the parent element box(overflows)
 
