--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="backgrndimage.css">
 </head>
 <body>
-    <h1>Welcome to my Home Page</h1>    
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam officiis ea, quis sunt sapiente vero nulla reiciendis quasi recusandae ex odit modi obcaecati non eligendi beatae minus. At, totam rem.</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, veniam et cupiditate velit repudiandae mollitia ad pariatur nam aperiam quasi ab, incidunt enim omnis assumenda dolorum facilis voluptatibus, sunt quisquam.</p>
+    
 </body>
     
 </html>
@@ -26,6 +23,14 @@
         sticky = positioned based on scroll position
         static = default position for an element
 
+   )
+
+   (
+    Cominators = explains the realtionship between listed selectors
+    =descendant
+    >= child
+    ~=general sibling
+    += adjacent sibling
    )
     (
     overflow = property that sets the desired behavior when content does not fit in the parent element box(overflows)
