Pseudoclass:link,hover,active,visited

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,19 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="combinator.css">
+    <link rel="stylesheet" href="pseudoclass.css">
 </head>
 <body>
-    <div id="Container">
-        <p>This is #1</p>
-        <p>This is #2</p>
-        <div>
-            <p>This is #3</p>
-        </div>
-    </div>
-
-    <p>This is #4</p>
-    <p>This is #5</p>
+     <a href="https://google.com">Google</a>
 </body>
     
 </html>
@@ -59,6 +50,19 @@
     inline = do not start on a new line, width is limited to what is needed (span,a,img)
 
     )
+    ( pseudo-classes are used to select and style elements based on their current state or specific relationships with other elements, beyond their default state. Pseudo-classes are denoted by a colon (:) followed by the name of the pseudo-class.
+
+Some common pseudo-classes in CSS include:
+
+:hover: Selects an element when the user hovers over it with the mouse pointer.
+:active: Selects an element when it is being activated or clicked by the user.
+:focus: Selects an element when it gains focus (e.g., when you click on an input field).
+:first-child: Selects an element that is the first child of its parent.
+:last-child: Selects an element that is the last child of its parent.
+:nth-child(): Selects elements based on their position within their parent element.
+:not(): Selects elements that do not match the given selector.
+:checked: Selects input elements that are checked, such as radio buttons or checkboxes.
+)
 
     (the <span> element is an inline-level container used to group and apply styles to a specific portion of text or other inline elements. It does not add any semantic meaning of its own but is rather a general-purpose container that allows you to target and style specific parts of a larger block of content.)
 -->
