--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="pseudoclass.css">
 </head>
 <body>
-     <a href="https://google.com">Google</a>
+     <ul>
+        <li>This is #1</li>
+        <li>This is #2</li>
+        <li>This is #3</li>
+        <li>This is #4</li>
+        <li>This is #5</li>
+        <li>This is #6</li>
+        <li>This is #7</li>
+     </ul>
 </body>
     
 </html>
