Become Familiar with Pseudoclass jhimik jhimik

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,15 +8,10 @@
     <link rel="stylesheet" href="pseudoclass.css">
 </head>
 <body>
-     <ul>
-        <li>This is #1</li>
-        <li>This is #2</li>
-        <li>This is #3</li>
-        <li>This is #4</li>
-        <li>This is #5</li>
-        <li>This is #6</li>
-        <li>This is #7</li>
-     </ul>
+     <div id="greeting">Hover Here
+        <p>Hello</p>
+     </div>
+     
 </body>
     
 </html>
