Lets Start Pseudo Element

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -27,6 +27,11 @@
         static = default position for an element
 
    )
+   (
+    pseudo-element = keyword added after a selector that's used to style a specific parts of an element
+
+    selector::pseudo-element
+   )
 
    (
     Cominators = explains the realtionship between listed selectors
