Familiar with pseudo element

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="pseudoclass.css">
+    <link rel="stylesheet" href="pseudoelement.css">
 </head>
 <body>
-     <div id="greeting">Hover Here
-        <p>Hello</p>
-     </div>
+     <h1>Hello</h1>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores natus quod eligendi accusantium laborum repellat, recusandae voluptatem voluptate tempore nostrum molestias. Praesentium ipsam, dolorem nemo obcaecati doloremque iure sint ratione.</p>
+
+     <ul id="fruits">
+        <li id="apple">apple</li>
+        <li id="orange">orange</li>
+        <li id="banana">banana</li>
+
+     </ul>
      
 </body>
     
