Done with Pagination awesome

--- a/CSS/page3.html
+++ b/CSS/page3.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="pagination.css">
 </head>
 <body>
-     <h1>This is Pagination 1</h1>
+     <h1>This is Pagination 3</h1>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et saepe nisi magni provident quod vitae id optio numquam deserunt quas maxime, libero voluptatem inventore neque labore officia ut quae possimus?</p>
 
      <div class="Pagination">
         <a href="index.html"><</a>
-        <a href="index.html" class="active">1</a>
+        <a href="index.html" >1</a>
         <a href="page2.html">2</a>
-        <a href="page3.html">3</a>
+        <a href="page3.html" class="active">3</a>
         <a href="page4.html">4</a>
         <a href="page5.html">5</a>
         <a href="page2.html">></a>
