Done with dropdown

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,21 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="pagination.css">
+    <link rel="stylesheet" href="dropdown.css">
 </head>
 <body>
-     <h1>This is Pagination 1</h1>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et saepe nisi magni provident quod vitae id optio numquam deserunt quas maxime, libero voluptatem inventore neque labore officia ut quae possimus?</p>
-
-     <div class="Pagination">
-        <a href="index.html"><</a>
-        <a href="index.html" class="active">1</a>
-        <a href="page2.html">2</a>
-        <a href="page3.html">3</a>
-        <a href="page4.html">4</a>
-        <a href="page5.html">5</a>
-        <a href="page2.html">></a>
-     </div>
+    <div class="Dropdown">
+      <button>Food</button>
+      <div class="container">
+        <a href="" id="Apple">Apple</a>
+        <a href="">Banana</a>
+        <a href="">Grapes</a>
+      </div>
+    </div> 
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut numquam quis dignissimos ab. Nisi, quis molestias incidunt quae sed veniam sunt a ratione, quisquam quibusdam inventore ad sint officia sit.</p>
 </body>
     
 </html>
