--- a/CSS/product.html
+++ b/CSS/product.html
@@ -21,7 +21,7 @@
     </div>
 
     <main>
-        <h3>Welcome to the Page</h3>
+        <h3>Welcome to the Product Page</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, asperiores? Enim illum laboriosam facere corrupti? Error impedit autem similique placeat magni in numquam. Molestiae aperiam labore culpa. Maxime, soluta illum.</p>
     </main>
 </body>
