done with basic website layout(header,navigationbar,main,footer)

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="websitelayout.css">
 </head>
 <body>
-    
+    <header>Header</header>
+    <nav class="navbar">
+
+    </nav>
+    <main>
+        <aside>
+            <h2>This is aside</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos mollitia ipsam assumenda, sequi, error ut qui inventore dignissimos laborum eos dicta quis, labore molestias repellendus beatae consequuntur iure cum nesciunt!</p>
+        </aside>
+        <section>
+            <h2>This is a section</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat aliquid iste corrupti culpa saepe sequi laborum recusandae eveniet voluptate ducimus animi minima, laudantium libero quis quas incidunt, doloremque perspiciatis.</p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa nostrum doloribus voluptate nobis voluptatem, pariatur earum maxime, exercitationem vero alias possimus dignissimos consequuntur adipisci corrupti. Cupiditate quidem amet cumque fugit.</p>
+        </section>
+        <article>
+            <h2>This is an article</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat dignissimos quos aliquam corrupti pariatur similique autem dolor fugit labore non obcaecati facilis reiciendis eaque, eveniet qui numquam. Quaerat, exercitationem eaque.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur impedit, culpa id, itaque quod cum, est aliquam similique beatae consectetur? Iste maxime in accusamus, reprehenderit voluptate vitae neque expedita.</p>
+        </article>
+    </main>
+    <footer>
+        <h2>Footer</h2>
+    </footer>
 </body>
     
 </html>
@@ -24,6 +48,23 @@
         static = default position for an element
 
    )
+   (
+    For Basic website lay out
+    semantic tags = keep your content organized
+    Better for SEO
+    Asists screen readers  and
+    other tech for accessibility
+
+    <header>=introductory content
+    <nav> = mavigation bar ,links
+    <main> = main content(section,aside,article,div)
+    <section>=dependent content
+        aside>=side content
+        <article>=independent content
+    <footer>=closing content
+   )
+
+
 
    (
     Pagination = method by which a document is separateed into pages, and numbers are given.
