--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,16 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="flexbox.css">
+    <link rel="stylesheet" href="transform.css">
     <script src="https://kit.fontawesome.com/6141fa0788.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="box" id="box1">1</div>
-        <div class="box" id="box2">2</div>
-        <div class="box" id="box3">3</div>
-        <div class="box" id="box4">4</div>
-    </div>
+    <div id="box1">Hi</div>
 </body>
     
 </html>
@@ -29,6 +24,10 @@
         sticky = positioned based on scroll position
         static = default position for an element
 
+   )
+
+   (
+    transform = CSS property lets you rotate,scale,skew or translate an element.
    )
    (
     For Basic website lay out
