Done with transform

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,7 +9,9 @@
     <script src="https://kit.fontawesome.com/6141fa0788.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="box1">Hi</div>
+    <div class="box" id="box1">Oe</div>
+    <div class="box" id="box2">Thapa</div>
+    <div class="box" id="box3">Gede</div>
 </body>
     
 </html>
