Lets start animation

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,9 +9,9 @@
     <script src="https://kit.fontawesome.com/6141fa0788.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="box" id="box1">Oe</div>
-    <div class="box" id="box2">Thapa</div>
-    <div class="box" id="box3">Gede</div>
+    <div class="box" id="box1">Aajatw</div>
+    <div class="box" id="box2">Masu</div>
+    <div class="box" id="box3">Khane ho</div>
 </body>
     
 </html>
