--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="transform.css">
+    <link rel="stylesheet" href="animation.css">
     <script src="https://kit.fontawesome.com/6141fa0788.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="box" id="box1">Aajatw</div>
-    <div class="box" id="box2">Masu</div>
-    <div class="box" id="box3">Khane ho</div>
+    <div id="box">Hi</div>
 </body>
     
 </html>
