--- a/HTML/header&footer.html
+++ b/HTML/header&footer.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <h1>HEY</h1>
+        <h1>Hey</h1>
         <pre>"Believe you can, and you're halfway there."</pre>
         <img src="image.png" hegiht ="200" width = "300">
     </main>
